Fixed incorrect ul/li formatting, and vertically aligned articles

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -12,6 +12,7 @@ section.places article {
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
 	position: relative;
+	vertical-align: top;
 
 }
 
